--- a/TreeTracker/UI/Views/Messaging/Announce/Announce.storyboard
+++ b/TreeTracker/UI/Views/Messaging/Announce/Announce.storyboard
@@ -17,30 +17,56 @@
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="18" translatesAutoresizingMaskIntoConstraints="NO" id="nud-eC-u0h">
-                                <rect key="frame" x="23" y="99.000000000000014" width="347" height="58.666666666666671"/>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ivI-wX-fYx">
+                                <rect key="frame" x="0.0" y="59" width="393" height="759"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="TITLE" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="POg-uf-V7R">
-                                        <rect key="frame" x="151.66666666666666" y="0.0" width="44" height="20.333333333333332"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="BODY" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Six-51-Jie">
-                                        <rect key="frame" x="150.66666666666666" y="38.333333333333343" width="45.666666666666657" height="20.333333333333329"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="XPw-q4-jlQ">
+                                        <rect key="frame" x="0.0" y="0.0" width="393" height="140.66666666666666"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="TITLE" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="POg-uf-V7R">
+                                                <rect key="frame" x="25" y="35" width="343" height="20.333333333333329"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="BODY" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Six-51-Jie">
+                                                <rect key="frame" x="25" y="85.333333333333343" width="343" height="20.333333333333329"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                        <constraints>
+                                            <constraint firstItem="Six-51-Jie" firstAttribute="leading" secondItem="XPw-q4-jlQ" secondAttribute="leading" constant="25" id="BCz-Tn-e4a"/>
+                                            <constraint firstAttribute="bottom" secondItem="Six-51-Jie" secondAttribute="bottom" constant="35" id="UYN-TO-Aky"/>
+                                            <constraint firstItem="Six-51-Jie" firstAttribute="top" secondItem="POg-uf-V7R" secondAttribute="bottom" constant="30" id="mfF-Pm-VlC"/>
+                                            <constraint firstItem="POg-uf-V7R" firstAttribute="top" secondItem="XPw-q4-jlQ" secondAttribute="top" constant="35" id="qLu-xK-Bco"/>
+                                            <constraint firstItem="POg-uf-V7R" firstAttribute="leading" secondItem="XPw-q4-jlQ" secondAttribute="leading" constant="25" id="rF4-Fs-WR0"/>
+                                            <constraint firstAttribute="trailing" secondItem="POg-uf-V7R" secondAttribute="trailing" constant="25" id="rLR-Pt-tsE"/>
+                                            <constraint firstAttribute="trailing" secondItem="Six-51-Jie" secondAttribute="trailing" constant="25" id="uh3-zd-ve3"/>
+                                        </constraints>
+                                    </view>
                                 </subviews>
-                            </stackView>
+                                <constraints>
+                                    <constraint firstItem="XPw-q4-jlQ" firstAttribute="width" secondItem="Wka-Ge-wc2" secondAttribute="width" id="J8d-RX-lw1"/>
+                                    <constraint firstItem="XPw-q4-jlQ" firstAttribute="trailing" secondItem="rgn-Zk-foQ" secondAttribute="trailing" id="NXz-Ft-gDV"/>
+                                    <constraint firstItem="XPw-q4-jlQ" firstAttribute="top" secondItem="rgn-Zk-foQ" secondAttribute="top" id="X1a-Uy-rtO"/>
+                                    <constraint firstItem="XPw-q4-jlQ" firstAttribute="centerX" secondItem="ivI-wX-fYx" secondAttribute="centerX" id="cdu-CV-AD9"/>
+                                    <constraint firstItem="XPw-q4-jlQ" firstAttribute="leading" secondItem="rgn-Zk-foQ" secondAttribute="leading" id="fRx-p5-s4t"/>
+                                    <constraint firstItem="XPw-q4-jlQ" firstAttribute="bottom" secondItem="rgn-Zk-foQ" secondAttribute="bottom" id="ibj-AQ-9LG"/>
+                                </constraints>
+                                <viewLayoutGuide key="contentLayoutGuide" id="rgn-Zk-foQ"/>
+                                <viewLayoutGuide key="frameLayoutGuide" id="Wka-Ge-wc2"/>
+                            </scrollView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="nud-eC-u0h" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" constant="40" id="EX7-7b-0ti"/>
-                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="nud-eC-u0h" secondAttribute="trailing" constant="23" id="bbJ-jf-J1M"/>
-                            <constraint firstItem="nud-eC-u0h" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="23" id="kJk-fO-TgF"/>
+                            <constraint firstItem="ivI-wX-fYx" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="H7X-HI-KmU"/>
+                            <constraint firstItem="ivI-wX-fYx" firstAttribute="trailing" secondItem="vDu-zF-Fre" secondAttribute="trailing" id="SRK-NH-vde"/>
+                            <constraint firstItem="ivI-wX-fYx" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" id="lzh-AB-BE2"/>
+                            <constraint firstItem="ivI-wX-fYx" firstAttribute="bottom" secondItem="vDu-zF-Fre" secondAttribute="bottom" id="qvS-H1-tf8"/>
                         </constraints>
                     </view>
                     <connections>
@@ -50,7 +76,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="176" y="15"/>
+            <point key="canvasLocation" x="174.80916030534351" y="14.788732394366198"/>
         </scene>
     </scenes>
     <resources>
